Update cv, add prev edits

--- a/cv/cv_202405.tex
+++ b/cv/cv_202405.tex
@@ -77,11 +77,22 @@ Advisor: Dr. James Omichinski
 %on request.
 %\end{rSection}
 
+\begin{rSection}{References}
+\begin{rSubsection}{Pejman Rohani (\url{rohani@uga.edu})}{}{Odum School of Ecology}{University of Georgia}
+\item Co-author and post-doctoral advisor
+\end{rSubsection}
+\begin{rSubsection}{Christopher J. Gill (\url{Christopher.gill@gatesfoundation.org})}{}{Global Health}{Gates Foundation}
+\item Collaborator and co-author (formerly at Boston University School of Public Health)
+\end{rSubsection}
+\begin{rSubsection}{Alun Lloyd (\url{alun\_lloyd@ncsu.edu})}{}{Department of Mathematics}{North Carolina State University}
+\item Co-author and post-doctoral advisor
+\end{rSubsection}
+\end{rSection}
+
 \begin{rSection}{Peer-Reviewed Publications}
 Full list available at \url{https://scholar.google.com/citations?user=y355pzMAAAAJ} 
 
-Mentee co-author: $\dagger$
-\\Co-first author: $\star$
+Mentee co-author: $\dagger$ \quad Co-first author: $\star$
 
 \authSelf, P. Rohani, L. Mwananyanda, G. Kwenda, Z. Mupila, C.J. Gill.
 Young Zambian infants with symptomatic RSV and pertussis infections are frequently prescribed inappropriate antibiotics: a retrospective analysis (2023).
@@ -134,6 +145,7 @@ and extinction in measles (meta)populations. Ecology Letters 16(8), 985-994.
 D.M. Smith, D.M. Finch, \authSelf, R. Jemison, J.F. Kelly (2009). Post-wildfire recovery of riparian vegetation during a period of water scarcity in the Southwestern USA. Fire Ecology 5(1), 38-55.
 \end{rSection}
 
+
 \begin{rSection}{Research Experience}
 
 \begin{rSubsection}{Post-doctoral Researcher}{Feb 2019 - Present}{Odum School of
@@ -141,7 +153,7 @@ Ecology, UGA}{Athens, GA}
 \item Data integration \& statistical analysis of historical and modern studies of pertussis, influenza, and SARS-CoV-2.
 \item Lead analysis of pertussis cohort study in Lusaka, Zambia.
 \item Community ecology and modeling of \textit{Salmonella} in chickens and cows.
-\item Mentor undergraduate and graduate students in scientific computing and reproducible research methods.
+\item Mentor undergraduate and graduate students in scientific computing and reproducible research.
 \end{rSubsection}
 
 \begin{rSubsection}{Post-doctoral Researcher}{Oct 2014 - July 2017}{Departments of
@@ -188,7 +200,7 @@ stipend (2010-2012).
 
 \begin{rSection}{Grants (Total: \$362,400)}
 \item May 2022 (\$275,000). NIH R21, lead author. COVID-19 mass gatherings as natural experiments.
-\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Grant, SFI Complex Systems Summer School.
+%\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Grant, SFI Complex Systems Summer School.
 %\item May 2010 (\$500). EEID Conference Workshop travel grant.
 %\item Apr 2010 (\$500). UNM SRAC travel grant, useR 2010.
 \item Mar 2010 (\$80,000). Center for Evolutionary \& Theoretical Immunology (CETI) Seed
@@ -199,22 +211,23 @@ Grant, contributing author. {\em Waning Immunity in Influenza and Whooping Cough
 \begin{rSection}{Contributed Talks}
 \item \authSelf, C.J. Gill, W.B. MacLeod, R.C. Pieciak, and Pej Rohani. Longitudinal qPCR reveals persistent asymptomatic pertussis in Zambian mothers \& infants. Annual meeting of the European Society For Paediatric Infectious Diseases. May 2021.
 \item \authSelf, C.J. Gill, W.B. MacLeod, R.C. Pieciak, and Pej Rohani.  \textit{Bordetella pertussis} in urban Southern Africa: Lessons from a mother/infant cohort study. International Bordetella Pertussis Lab Meeting. Feb 2022.
-\item \authSelf and A.L. Lloyd.  Skeeter Buster Past, Present, and Future: Challenges and Issues in Modeling Mosquito Populations.
+\item \authSelf\ and A.L. Lloyd.  Skeeter Buster Past, Present, and Future: Challenges and Issues in Modeling Mosquito Populations.
 Society of Vector Ecology. Albuquerque, NM. Sep 2015.
 SAMSI Program on Mathematical and Statistical Ecology Transition Workshop. Durham, NC. May 2015.
-\item \authSelf and H.J. Wearing.  Appropriate Measures of Persistence in Childhood Diseases.
+\item \authSelf\ and H.J. Wearing.  Appropriate Measures of Persistence in Childhood Diseases.
 SAMSI Program on Mathematical and Statistical Ecology Transition Workshop. Durham, NC. May 2015.
-\item \authSelf and H.J. Wearing.  Reporting rate variation in U.S. cities.
-UNM Biology Research Day. Albuquerque, NM. Apr 2013.
+%\item \authSelf\ and H.J. Wearing.  Reporting rate variation in U.S. cities.
+%UNM Biology Research Day. Albuquerque, NM. Apr 2013.
 \item \authSelf.  Measles dynamics in the pre-vaccine era United States: Linking
 models and data. UNM Biology Brownbag seminar series. Albuquerque, NM. Oct 2011.
-\item \authSelf and H.J. Wearing.  Measles epidemics in pre-vaccine era United States cities: Linking models and data. Ecological Society of America conference. Austin, TX. Aug 2011.
+\item \authSelf\ and H.J. Wearing.  Measles epidemics in pre-vaccine era United States cities: Linking models and data. Ecological Society of America conference. Austin, TX. Aug 2011.
 \item \authSelf.  Spatio-temporal ecology of measles. 
 UNM Biology Research Day. Albuquerque, NM. Apr 2011.
 \item \authSelf. Rwave - Detecting synchrony of influenza between U.S. states.
 useR 2010 Conference. Gaithersburg, MD. Jul 2010.
 \end{rSection}
 
+\clearpage
 \begin{rSection}{Contributed Posters}
 \item \authSelf, C. Andris, T.S. Brett, and P. Rohani.
 Signatures of focal mass gatherings: how cellular device records reveal COVID-era travel pulses. 
@@ -316,20 +329,18 @@ Disease conference
 \item 2019 - 2021. Deven Gokhale, UGA Ecology Ph.D. student
 \item 2018 - 2022. Ryan Silver, Kenyon Mathematics Undegraduate student
 \item 2015 - 2017. Michael Vella, NCSU Mathematics Ph.D. student
-\item 2015 - 2017. Michael Vella, NCSU Mathematics Ph.D. student
 \item 2015 - 2017. Gabriel Zilnik, NCSU Entomology Masters student
-\item 2012 - 2014. Joshua Nightingale, UNM Biology Undergraduate student
-\item 2011 - 2012. Nathan Cournoyer, UNM Biology Undergraduate student
+\item 2011 - 2014. Undergraduate research assistants, UNM Biology
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
-\clearpage
+%\clearpage
 
-\begin{rSection}{Professional Events}
-\item Oct 2011. Rcpp R Programming Master Class. San Francisco, CA.
-\item Jun 2011. Santa Fe Institute Complex Systems Summer School. Santa Fe Institute. Santa Fe, NM. 
+%\begin{rSection}{Professional Events}
+%\item Oct 2011. Rcpp R Programming Master Class. San Francisco, CA.
+%\item Jun 2011. Santa Fe Institute Complex Systems Summer School. Santa Fe Institute. Santa Fe, NM. 
 %\item Jun 2021. Ecology and Evolution of Infectious Disease Conference.  Montpellier, France (remote).
 %\item Jun 2019. Ecology and Evolution of Infectious Disease Conference.  Princeton University. Princeton, NJ.
 %\item Sep 2015. Society of Vector Ecology Conference. Albuquerque, NM.
@@ -342,7 +353,7 @@ Disease conference
 %\item May 2010. Ecology and Evolution of Infectious Disease Conference and Workshop.  Cornell University.  Ithica, NY.
 %\item Aug 2009. Ecological Society of America Conference. Albuquerque, NM.
 %\item May 2007. National Groundwater Association Conference. Albuquerque, NM. 
-\end{rSection}
+%\end{rSection}
 
 \begin{rSection}{Professional Service}
 \item Reviewer, Scientific Reports
@@ -370,17 +381,6 @@ distribution estimation.
 \item 2010 - 2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
 
-\clearpage
 
-\begin{rSection}{References}
-\begin{rSubsection}{Pej Rohani}{}{Odum School of Ecology}{University of Georgia}
-\item Co-author and post-doctoral advisor
-\item email: rohani@uga.edu
-\end{rSubsection}
-\begin{rSubsection}{Alun Lloyd}{}{Department of Mathematics}{North Carolina State University}
-\item Co-author and post-doctoral advisor
-\item email: alun\_lloyd@ncsu.edu
-\end{rSubsection}
-\end{rSection}
 
 \end{document}
