--- a/cv/cv_202502.tex
+++ b/cv/cv_202502.tex
@@ -30,7 +30,7 @@
 \pagestyle{fancy}
 \fancyhf{} 
 \renewcommand{\headrulewidth}{0pt}
-\rfoot{C.E. Gunning 2023-06: Page \thepage \hspace{1pt} of \pageref{LastPage}}
+\rfoot{C.E. Gunning 2025-02: Page \thepage \hspace{1pt} of \pageref{LastPage}}
 % clear old, activate new footer
 %\pagestyle{fancy}
 
@@ -77,11 +77,31 @@ Advisor: Dr. James Omichinski
 %on request.
 %\end{rSection}
 
+\begin{rSection}{References}
+\begin{rSubsection}{Pejman Rohani (\url{rohani@uga.edu})}{}{Odum School of Ecology}{University of Georgia}
+\item Co-author and post-doctoral advisor
+\end{rSubsection}
+\begin{rSubsection}{Christopher J. Gill (\url{Christopher.gill@gatesfoundation.org})}{}{Global Health}{Gates Foundation}
+\item Collaborator and co-author (formerly at Boston University School of Public Health)
+\end{rSubsection}
+\begin{rSubsection}{Alun Lloyd (\url{alun\_lloyd@ncsu.edu})}{}{Department of Mathematics}{North Carolina State University}
+\item Co-author and post-doctoral advisor
+\end{rSubsection}
+\end{rSection}
+
 \begin{rSection}{Peer-Reviewed Publications}
 Full list available at \url{https://scholar.google.com/citations?user=y355pzMAAAAJ} 
 
-Mentee co-author: $\dagger$
-\\Co-first author: $\star$
+Mentee co-author: $\dagger$ \quad Co-first author: $\star$
+
+
+\authSelf, C.J. Gill, P. Rohani.
+Shining light on the dark matter of pertussis: evidence for an asymptomatic carriage state from a longitudinal cohort of mother/infant dyads 
+(In Review).
+
+A.T. Siceloff, D. Waltman , \authSelf, S.P. Nolan, P. Rohani, N.W. Shariat.
+Longitudinal study highlights patterns of Salmonella serovar co-occurrence and exclusion in commercial poultry production 
+(In Review).
 
 \authSelf, P. Rohani, L. Mwananyanda, G. Kwenda, Z. Mupila, C.J. Gill.
 Young Zambian infants with symptomatic RSV and pertussis infections are frequently prescribed inappropriate antibiotics: a retrospective analysis (2023).
@@ -134,15 +154,23 @@ and extinction in measles (meta)populations. Ecology Letters 16(8), 985-994.
 D.M. Smith, D.M. Finch, \authSelf, R. Jemison, J.F. Kelly (2009). Post-wildfire recovery of riparian vegetation during a period of water scarcity in the Southwestern USA. Fire Ecology 5(1), 38-55.
 \end{rSection}
 
+
 \begin{rSection}{Research Experience}
 
-\begin{rSubsection}{Post-doctoral Researcher}{Feb 2019 - Present}{Odum School of
-Ecology, UGA}{Athens, GA}
+\begin{rSubsection}{Senior Research Associate}{May 2025 - present}{Odum School of Ecology, UGA}{Athens, GA}
+\item Write grants and conduct independent research.
+\item Focus on \textit{B. pertussis}, influenza, and SARS-CoV-2 epidemiology, ecology, and evolution.
+\item Mentor undergraduate and graduate students in scientific computing and reproducible research.
+\end{rSubsection}
+
+\begin{rSubsection}{Post-doctoral Researcher}{Feb 2019 - Apr 2024}{Odum School of Ecology, UGA}{Athens, GA}
 \item Data integration \& statistical analysis of historical and modern studies of pertussis, influenza, and SARS-CoV-2.
 \item Lead analysis of pertussis cohort study in Lusaka, Zambia.
 \item Community ecology and modeling of \textit{Salmonella} in chickens and cows.
-\item Mentor undergraduate and graduate students in scientific computing and reproducible research methods.
+\item Mentor undergraduate and graduate students in scientific computing and reproducible research.
 \end{rSubsection}
+
+\clearpage
 
 \begin{rSubsection}{Post-doctoral Researcher}{Oct 2014 - July 2017}{Departments of
 Entomology and Mathematics, NCSU}{Raleigh, NC}
@@ -157,8 +185,7 @@ Entomology and Mathematics, NCSU}{Raleigh, NC}
 \item Undergraduate training and mentorship
 \end{rSubsection}
 
-\begin{rSubsection}{Hydrology Research Technician}{Jan 2006 - Jan 2009}{Rocky
-Mountain Research Station, U.S. Forest Service}{Albuquerque, NM}
+\begin{rSubsection}{Hydrology Research Technician}{Jan 2006 - Jan 2009}{Rocky Mountain Research Station, U.S. Forest Service}{Albuquerque, NM}
 \item Conduct original research and prepare technical reports for U.S. Forest Service
 \item Collect and managed environmental monitoring data 
 \end{rSubsection}
@@ -168,8 +195,7 @@ Mountain Research Station, U.S. Forest Service}{Albuquerque, NM}
 \item Design data entry and management system
 \end{rSubsection}
 
-\begin{rSubsection}{NMR Lab Technician}{Jan 2001 - Jun 2002}{Omichinski Lab, UGA
-Biochemistry and Molecular Biology}{Athens, GA}
+\begin{rSubsection}{NMR Lab Technician}{Jan 2001 - Jun 2002}{Omichinski Lab, UGA Biochemistry and Molecular Biology}{Athens, GA}
 \item Administer mixed Unix workstation cluster
 \item Evaluate linux hardware/software for high-performance NMR data visualization
 \end{rSubsection}
@@ -188,7 +214,7 @@ stipend (2010-2012).
 
 \begin{rSection}{Grants (Total: \$362,400)}
 \item May 2022 (\$275,000). NIH R21, lead author. COVID-19 mass gatherings as natural experiments.
-\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Grant, SFI Complex Systems Summer School.
+%\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Grant, SFI Complex Systems Summer School.
 %\item May 2010 (\$500). EEID Conference Workshop travel grant.
 %\item Apr 2010 (\$500). UNM SRAC travel grant, useR 2010.
 \item Mar 2010 (\$80,000). Center for Evolutionary \& Theoretical Immunology (CETI) Seed
@@ -197,24 +223,26 @@ Grant, contributing author. {\em Waning Immunity in Influenza and Whooping Cough
 \end{rSection}
 
 \begin{rSection}{Contributed Talks}
+\item \authSelf. \textit{Bordetella pertussis} in urban Southern Africa. International Bordetella Pertussis Lab Meeting. Feb 2024.
 \item \authSelf, C.J. Gill, W.B. MacLeod, R.C. Pieciak, and Pej Rohani. Longitudinal qPCR reveals persistent asymptomatic pertussis in Zambian mothers \& infants. Annual meeting of the European Society For Paediatric Infectious Diseases. May 2021.
 \item \authSelf, C.J. Gill, W.B. MacLeod, R.C. Pieciak, and Pej Rohani.  \textit{Bordetella pertussis} in urban Southern Africa: Lessons from a mother/infant cohort study. International Bordetella Pertussis Lab Meeting. Feb 2022.
-\item \authSelf and A.L. Lloyd.  Skeeter Buster Past, Present, and Future: Challenges and Issues in Modeling Mosquito Populations.
+\item \authSelf\ and A.L. Lloyd.  Skeeter Buster Past, Present, and Future: Challenges and Issues in Modeling Mosquito Populations.
 Society of Vector Ecology. Albuquerque, NM. Sep 2015.
 SAMSI Program on Mathematical and Statistical Ecology Transition Workshop. Durham, NC. May 2015.
-\item \authSelf and H.J. Wearing.  Appropriate Measures of Persistence in Childhood Diseases.
+\item \authSelf\ and H.J. Wearing.  Appropriate Measures of Persistence in Childhood Diseases.
 SAMSI Program on Mathematical and Statistical Ecology Transition Workshop. Durham, NC. May 2015.
-\item \authSelf and H.J. Wearing.  Reporting rate variation in U.S. cities.
-UNM Biology Research Day. Albuquerque, NM. Apr 2013.
+%\item \authSelf\ and H.J. Wearing.  Reporting rate variation in U.S. cities.
+%UNM Biology Research Day. Albuquerque, NM. Apr 2013.
 \item \authSelf.  Measles dynamics in the pre-vaccine era United States: Linking
 models and data. UNM Biology Brownbag seminar series. Albuquerque, NM. Oct 2011.
-\item \authSelf and H.J. Wearing.  Measles epidemics in pre-vaccine era United States cities: Linking models and data. Ecological Society of America conference. Austin, TX. Aug 2011.
+\item \authSelf\ and H.J. Wearing.  Measles epidemics in pre-vaccine era United States cities: Linking models and data. Ecological Society of America conference. Austin, TX. Aug 2011.
 \item \authSelf.  Spatio-temporal ecology of measles. 
 UNM Biology Research Day. Albuquerque, NM. Apr 2011.
 \item \authSelf. Rwave - Detecting synchrony of influenza between U.S. states.
 useR 2010 Conference. Gaithersburg, MD. Jul 2010.
 \end{rSection}
 
+%\clearpage
 \begin{rSection}{Contributed Posters}
 \item \authSelf, C. Andris, T.S. Brett, and P. Rohani.
 Signatures of focal mass gatherings: how cellular device records reveal COVID-era travel pulses. 
@@ -316,20 +344,18 @@ Disease conference
 \item 2019 - 2021. Deven Gokhale, UGA Ecology Ph.D. student
 \item 2018 - 2022. Ryan Silver, Kenyon Mathematics Undegraduate student
 \item 2015 - 2017. Michael Vella, NCSU Mathematics Ph.D. student
-\item 2015 - 2017. Michael Vella, NCSU Mathematics Ph.D. student
 \item 2015 - 2017. Gabriel Zilnik, NCSU Entomology Masters student
-\item 2012 - 2014. Joshua Nightingale, UNM Biology Undergraduate student
-\item 2011 - 2012. Nathan Cournoyer, UNM Biology Undergraduate student
+\item 2011 - 2014. Undergraduate research assistants, UNM Biology
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
-\clearpage
+%\clearpage
 
-\begin{rSection}{Professional Events}
-\item Oct 2011. Rcpp R Programming Master Class. San Francisco, CA.
-\item Jun 2011. Santa Fe Institute Complex Systems Summer School. Santa Fe Institute. Santa Fe, NM. 
+%\begin{rSection}{Professional Events}
+%\item Oct 2011. Rcpp R Programming Master Class. San Francisco, CA.
+%\item Jun 2011. Santa Fe Institute Complex Systems Summer School. Santa Fe Institute. Santa Fe, NM. 
 %\item Jun 2021. Ecology and Evolution of Infectious Disease Conference.  Montpellier, France (remote).
 %\item Jun 2019. Ecology and Evolution of Infectious Disease Conference.  Princeton University. Princeton, NJ.
 %\item Sep 2015. Society of Vector Ecology Conference. Albuquerque, NM.
@@ -342,17 +368,17 @@ Disease conference
 %\item May 2010. Ecology and Evolution of Infectious Disease Conference and Workshop.  Cornell University.  Ithica, NY.
 %\item Aug 2009. Ecological Society of America Conference. Albuquerque, NM.
 %\item May 2007. National Groundwater Association Conference. Albuquerque, NM. 
-\end{rSection}
+%\end{rSection}
 
 \begin{rSection}{Professional Service}
+\item Reviewer, Ecology Letters.
+\item Reviewer, PLOS Neglected Tropical Diseases
 \item Reviewer, Scientific Reports
 \item Reviewer, Journal of Pediatric Infectious Diseases
 \item Reviewer, Journal of the Royal Society Interface
 \item Reviewer, BMC Infectious Diseases
-\item Reviewer, PLOS Neglected Tropical Diseases
 \item Reviewer, PLOS Computational Biology
 \item Reviewer, Transactions of the Royal Society of Tropical Medicine and Hygiene.
-\item Reviewer, Ecology Letters.
 \item Reviewer, Theoretical Ecology.
 \item Grant review, Digital Technology Development Award. Wellcome Trust.
 \item Grant reader, Graduate Research Allocations Committee (GRAC). UNM Biology.
@@ -369,18 +395,4 @@ distribution estimation.
 \item 2009 - 2012. Maintainer of \texttt{Rwave}: R package for continuous wavelet transforms.
 \item 2010 - 2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
-
-\clearpage
-
-\begin{rSection}{References}
-\begin{rSubsection}{Pej Rohani}{}{Odum School of Ecology}{University of Georgia}
-\item Co-author and post-doctoral advisor
-\item email: rohani@uga.edu
-\end{rSubsection}
-\begin{rSubsection}{Alun Lloyd}{}{Department of Mathematics}{North Carolina State University}
-\item Co-author and post-doctoral advisor
-\item email: alun\_lloyd@ncsu.edu
-\end{rSubsection}
-\end{rSection}
-
 \end{document}
